# gemvalue-ops-studio

./: .gitignore  .vercelignore  README.md  index.html  pyproject.toml  setup.cfg  setup.py
src/components/: data_ingestion_component.py
templates/: form.html  index.html  result.html
