[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlopsproject"
version = "0.0.1"
description = "MLOps foundation project"
readme = "README.md"
authors = [
    { name = "Asutosh", email = "ashutoshsidhya69@gmail.com" }
]
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
keywords = ["MLOps", "end-to-end", "project"]

[tool.setuptools.packages.find]
where = ["src"]
